fix: scroll problem by adding overflow: hidden to main page when visiting inner page

--- a/src/js/components/pages/dashboard/InternBox.styl
+++ b/src/js/components/pages/dashboard/InternBox.styl
@@ -9,3 +9,7 @@
 .InternBox
     @media screen and (max-width: 768px)
         width: 100% !important
+
+.grommetux-app--hidden
+    position: fixed
+    overflow: hidden !important
